Tutorial drop down

--- a/styles/tutorialstyle.css
+++ b/styles/tutorialstyle.css
@@ -94,12 +94,18 @@ header {
 	margin-left: 5%;
   }
 
-  .sec-center {
-	position: relative;
-	max-width: 100%;
-	text-align: left;
-	z-index: 200;
-  }
+  .dropdown-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.sec-center, .sec-center2 {
+    position: relative;
+    max-width: 100%;
+    text-align: left;
+    z-index: 200;
+    width: 45%; /* Adjust width as needed */
+}
   [type="checkbox"]:checked,
   [type="checkbox"]:not(:checked){
 	position: absolute;
@@ -234,6 +240,267 @@ header {
 	  -ms-flex-pack: distribute;
   }
 
+  
+.dropdown:checked + label,
+  .dropdown:not(:checked) + label{
+	position: relative;
+	font-family: 'Roboto', sans-serif;
+	font-weight: 500;
+	font-size: 15px;
+	line-height: 2;
+	height: 50px;
+	transition: all 200ms linear;
+	border-radius: 4px;
+	width: 220px;
+	letter-spacing: 1px;
+	display: -webkit-inline-flex;
+	display: -ms-inline-flexbox;
+	display: inline-flex;
+	-webkit-align-items: center;
+	-moz-align-items: center;
+	-ms-align-items: center;
+	align-items: center;
+	-webkit-justify-content: center;
+	-moz-justify-content: center;
+	-ms-justify-content: center;
+	justify-content: center;
+	-ms-flex-pack: center;
+	text-align: center;
+	border: none;
+	background-color: #ffeba7;
+	cursor: pointer;
+	color: #102770;
+	box-shadow: 0 12px 35px 0 rgba(255,235,167,.15);
+  }
+  .dark-light:checked ~ .sec-center .for-dropdown{
+	background-color: #102770;
+	color: #ffeba7;
+	box-shadow: 0 12px 35px 0 rgba(16,39,112,.25);
+  }
+
+  .dropdown:checked + label:before{
+	pointer-events: auto;
+  }
+  .dropdown:not(:checked) + label .uil {
+	font-size: 24px;
+	margin-left: 10px;
+	transition: transform 200ms linear;
+  }
+  .dropdown:checked + label .uil {
+	transform: rotate(180deg);
+	font-size: 24px;
+	margin-left: 10px;
+	transition: transform 200ms linear;
+  }
+  .section-dropdown {
+	position: absolute;
+	padding: 5px;
+	background-color: #ffffff;
+	top: 70px;
+	width: 50%;
+	border-radius: 4px;
+	display: block;
+	box-shadow: 0 14px 35px 0 rgba(9,9,12,0.4);
+	z-index: 2;
+	opacity: 0;
+	pointer-events: none;
+	transition: all 200ms linear;
+  }
+  .dark-light:checked ~ .sec-center .section-dropdown {
+	background-color: #fff;
+	box-shadow: 0 14px 35px 0 rgba(9,9,12,0.15);
+  }
+  .dropdown:checked ~ .section-dropdown{
+	opacity: 1;
+	pointer-events: auto;
+	transform: translateY(0);
+  }
+  .section-dropdown:before {
+	position: absolute;
+	top: -20px;
+	left: 0;
+	width: 50%;
+	height: 20px;
+	content: '';
+	display: block;
+	z-index: 1;
+  }
+  .section-dropdown:after {
+	position: absolute;
+	top: -7px;
+	left: 30px;
+	width: 0; 
+	height: 0; 
+	border-left: 8px solid transparent;
+	border-right: 8px solid transparent; 
+	border-bottom: 8px solid #111;
+	content: '';
+	display: block;
+	z-index: 2;
+	transition: all 200ms linear;
+  }
+  .dark-light:checked ~ .sec-center .section-dropdown:after {
+	border-bottom: 8px solid #fff;
+  }
+  
+  .sec-center a{
+	position: relative;
+	color: black;
+	transition: all 200ms linear;
+	font-family: 'Roboto', sans-serif;
+	font-weight: 500;
+	font-size: 15px;
+	border-radius: 2px;
+	padding: 5px 0;
+	padding-left: 20px;
+	padding-right: 15px;
+	margin: 2px 0;
+	text-align: left;
+	text-decoration: none;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-align-items: center;
+	-moz-align-items: center;
+	-ms-align-items: center;
+	align-items: center;
+	justify-content: space-between;
+	  -ms-flex-pack: distribute;
+  }
+
+  .dropdown2:checked + .for-dropdown2,
+.dropdown2:not(:checked) + .for-dropdown2 {
+    position: relative;
+	font-family: 'Roboto', sans-serif;
+	font-weight: 500;
+	font-size: 15px;
+	line-height: 2;
+	height: 50px;
+	transition: all 200ms linear;
+	border-radius: 4px;
+	width: 220px;
+	letter-spacing: 1px;
+	display: -webkit-inline-flex;
+	display: -ms-inline-flexbox;
+	display: inline-flex;
+	-webkit-align-items: center;
+	-moz-align-items: center;
+	-ms-align-items: center;
+	align-items: center;
+	-webkit-justify-content: center;
+	-moz-justify-content: center;
+	-ms-justify-content: center;
+	justify-content: center;
+	-ms-flex-pack: center;
+	text-align: center;
+	border: none;
+	background-color: #ffeba7;
+	cursor: pointer;
+	color: #102770;
+	box-shadow: 0 12px 35px 0 rgba(255,235,167,.15);
+}
+
+.dark-light:checked ~ .sec-center2 .for-dropdown2 {
+    background-color: #102770;
+	color: #ffeba7;
+	box-shadow: 0 12px 35px 0 rgba(16,39,112,.25);
+}
+
+.dropdown2:checked + .for-dropdown2:before {
+    pointer-events: auto;
+}
+
+.dropdown2:not(:checked) + .for-dropdown2 .uil2 {
+    font-size: 24px;
+	margin-left: 10px;
+	transition: transform 200ms linear;
+}
+
+.dropdown2:checked + .for-dropdown2 .uil2 {
+    transform: rotate(180deg);
+	font-size: 24px;
+	margin-left: 10px;
+	transition: transform 200ms linear;
+}
+
+.section-dropdown2 {
+    position: absolute;
+	padding: 5px;
+	background-color: #ffffff;
+	top: 70px;
+	width: 50%;
+	border-radius: 4px;
+	display: block;
+	box-shadow: 0 14px 35px 0 rgba(9,9,12,0.4);
+	z-index: 2;
+	opacity: 0;
+	pointer-events: none;
+	transition: all 200ms linear;
+}
+
+.dark-light:checked ~ .sec-center2 .section-dropdown2 {
+    background-color: #fff;
+	box-shadow: 0 14px 35px 0 rgba(9,9,12,0.15);
+}
+
+.dropdown2:checked ~ .section-dropdown2 {
+	opacity: 1;
+	pointer-events: auto;
+	transform: translateY(0);
+}
+
+.section-dropdown2:before {
+    position: absolute;
+	top: -20px;
+	left: 0;
+	width: 50%;
+	height: 20px;
+	content: '';
+	display: block;
+	z-index: 1;
+}
+
+.section-dropdown2:after {
+    position: absolute;
+	top: -7px;
+	left: 30px;
+	width: 0; 
+	height: 0; 
+	border-left: 8px solid transparent;
+	border-right: 8px solid transparent; 
+	border-bottom: 8px solid #111;
+	content: '';
+	display: block;
+	z-index: 2;
+	transition: all 200ms linear;
+}
+
+.dark-light:checked ~ .sec-center2 .section-dropdown2:after {
+    border-bottom: 8px solid #fff;
+}
+
+.sec-center2 a {
+    position: relative;
+	color: black;
+	transition: all 200ms linear;
+	font-family: 'Roboto', sans-serif;
+	font-weight: 500;
+	font-size: 15px;
+	border-radius: 2px;
+	padding: 5px 0;
+	padding-left: 20px;
+	padding-right: 15px;
+	margin: 2px 0;
+	text-align: left;
+	text-decoration: none;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-align-items: center;
+	-moz-align-items: center;
+	-ms-align-items: center;
+	align-items: center;
+	justify-content: space-between;
+	  -ms-flex-pack: distribute;
+}
  
 
   a:hover {
