--- a/styles/aboutstyle.css
+++ b/styles/aboutstyle.css
@@ -75,7 +75,7 @@ header h1{
 header {
 	background-color: #ffffff;
 	padding: 0.5rem;
-	border-bottom: 1px solid black;
+	/* border-bottom: 1px solid black; */
   }
 
   .user-icon img {
@@ -100,7 +100,7 @@ header {
    /* Person specified content box*/
    .aboutorigame {
   display: flex;
-  border: #ddd 1px solid;
+  /* border: #ddd 1px solid; */
   margin-left: 5%;
   margin-right: 5%;
    }
@@ -138,7 +138,7 @@ header {
  
    .aboutgoals {
      display: flex;
-     border: #ddd 1px solid;
+     /* border: #ddd 1px solid; */
      margin-left: 5%;
      margin-right: 5%;
     justify-content: right;
@@ -172,7 +172,7 @@ header {
    
    .aboutvision {
      display: flex;
-     border: #ddd 1px solid;
+     /* border: #ddd 1px solid; */
      margin-left: 5%;
      margin-right: 5%;
     justify-content: left;
@@ -205,7 +205,7 @@ header {
    }
  
    .team{
-     border: 1px black solid;
+     /* border: 1px black solid; */
      justify-content: center;
      display: flex;
      flex-direction: column;
@@ -229,7 +229,7 @@ header {
    justify-content: right;
    text-align: right;
     background-color: #F4F4ED;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     padding-top: 2rem;
   }
  
@@ -285,7 +285,7 @@ header {
     margin-right: 5%;
    justify-content: left;
    background-color: #F4F4ED;
-   border: 1px solid black;
+   /* border: 1px solid black; */
    padding-top: 2rem;
   }
 
