--- a/styles/login.css
+++ b/styles/login.css
@@ -1,72 +1,49 @@
-/* Reset box-sizing for all elements */
-/* Reset box-sizing for all elements */
 * {
-  box-sizing: border-box;
-}
-
-/* Set default styles for HTML and body */
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  background-color: #f4f4f4;
+	box-sizing: border-box;
 }
 
 
-/* Navigation styles */
-nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 1rem;
-  background-color: #ffffff;
-  border-bottom: 1px solid black;
+html, body {
+	width: 100%;
+	height: 100%;
+	font-family: Arial, sans-serif;
+	
+  }
+
+  #navbar {
+	padding: 5px;
+}
+
+#navtext {
+	margin-top: 5px;
+}
+  
+nav img {
+	height: 4rem;
+	padding: 10px; /* Add padding to the logo */
+}
+
+footer {
+	background-color: #ffffff;
+	padding: 1rem;
+	text-align: center;
+	margin-top: 1rem;
+    color: rgb(0, 0, 0);
 }
 
 a:hover {
-  background-color: #f0f0f0;
+	background-color: #f0f0f0;
+  }
+
+header h1{
+    color: white;
 }
 
-nav img {
-  height: 4rem;
-  padding: 10px; /* Add padding to the logo */
-}
-
-#nav-links {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-  display: flex;
-  align-items: center; /* Align navigation items vertically with the logo */
-}
-
-#nav-links li {
-  margin-right: 1rem;
-}
-
-#nav-links li a {
-  color: rgb(0, 0, 0);
-  text-decoration: none;
-  margin-left: 1rem;
-  font-size: 1.3rem;
-}
-
-#hamburger-menu {
-  display: none;
-  cursor: pointer;
-}
-
-#hamburger-menu div {
-  width: 25px;
-  height: 3px;
-  background-color: rgb(0, 0, 0);
-  margin: 4px;
-}
-
-/* Main content styles */
-main {
-  padding: 2rem;
-}
+header {
+	background-color: #ffffff;
+	padding: 0.5rem;
+	border-bottom: 1px solid black;
+  }
 
 /* Login form styles */
 .screen {
