--- a/styles/styles.css
+++ b/styles/styles.css
@@ -269,7 +269,65 @@ header {
 	display: block; /* Make the button a block element */
 	margin: 20px auto 0; /* Add some top margin to separate it from the image */
   }
+  
+/* cart */
 
+  .checkout-container {
+	width: 500px;
+	margin: 0 auto;
+	padding: 20px;
+	background-color: white;
+	border: 1px solid #ddd;
+	border-radius: 4px;
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+.logo {
+	text-align: center;
+	margin-bottom: 30px;
+}
+.form-group {
+	margin-bottom: 20px;
+}
+label {
+	display: block;
+	font-weight: bold;
+	margin-bottom: 5px;
+}
+input,
+textarea,
+select {
+	width: 100%;
+	padding: 8px;
+	border: 1px solid #ddd;
+	border-radius: 4px;
+	box-sizing: border-box;
+}
+.order-summary {
+	margin-top: 30px;
+	padding-top: 20px;
+	border-top: 1px solid #ddd;
+}
+.order-summary h3 {
+	text-align: center;
+	margin-bottom: 20px;
+}
+
+button {
+	padding: 10px 20px; /* Add padding for spacing */
+	font-size: 16px; /* Set font size */
+	background-color: #4caf50; /* Set background color */
+	color: white; /* Set text color */
+	border: none; /* Remove border */
+	border-radius: 5px; /* Add border radius for rounded corners */
+	cursor: pointer; /* Change cursor to pointer on hover */
+  }
+  
+  button:hover {
+	background-color: #45a049; /* Change background color on hover */
+  }
+
+
+ 
 /* Card Carousell */
   @import url("https://fonts.googleapis.com/css?family=DM+Sans:400,500,700&display=swap");
   
