--- a/styles/login.css
+++ b/styles/login.css
@@ -17,6 +17,13 @@ html, body {
 #navtext {
 	margin-top: 5px;
 }
+button#dropdown-toggle {
+	background-color: #3949AB; 
+  }
+
+  button#dropdown-toggle:hover {
+	background-color: #1A237E; 
+  }
   
 nav img {
 	height: 4rem;
