--- a/styles/aboutstyle.css
+++ b/styles/aboutstyle.css
@@ -180,7 +180,13 @@ header {
      color: #383146;
      margin: auto;
    }
-
+   button#dropdown-toggle {
+    background-color: #3949AB; 
+    }
+  
+    button#dropdown-toggle:hover {
+    background-color: #1A237E; 
+    }
    .aboutmalc {
     display: flex;
     margin-left: 5%;
@@ -200,6 +206,7 @@ header {
   
 }
 
+
 .yejiimg{
   margin: 2%;
   width: 10rem;
@@ -210,11 +217,6 @@ header {
 }
 
 
-.malcimg img, .yejiimg img {
-  width: 100%; 
-  height: 100%; 
-  object-fit: cover; 
-} 
 
 .malcom p{
   margin-left: 50%;
