--- a/styles/cart.css
+++ b/styles/cart.css
@@ -14,6 +14,13 @@ html, body {
 	padding: 5px;
 }
 
+button#dropdown-toggle {
+	background-color: #3949AB; 
+  }
+
+  button#dropdown-toggle:hover {
+	background-color: #1A237E; 
+  }
 #navtext {
 	margin-top: 5px;
 }
