tutorial and 3d alignment

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -103,24 +103,35 @@ header {
   }
 
   #openButton {
-	position: absolute;
-	top: 28%;
-	left: 57%;
-	background-color: #DED5F0; /* Light purple */
-	border: 1px solid black;
-	color: black;
-	padding: 16px 16px;
+	background-color: #3949AB; /* Light purple */
+	border: none;
+	color: white;
+	padding: 12px; /* Adjust padding for a neater look */
 	text-align: center;
 	text-decoration: none;
-	display: inline-block;
 	cursor: pointer;
 	border-radius: 50%; /* Make the button round */
 	transition: background-color 0.3s; /* Smooth color transition */
-	box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Subtle shadow for depth */
+	box-shadow: 0 0 8px rgba(0, 0, 0, 0.2); /* Subtle shadow for depth */
+	width: 3rem; /* Set the width */
+	height: 3rem; /* Set the height */
+	font-size: 1rem;
+	margin-bottom: 2rem;
+	margin-left: 1rem;
+  }
+
+  #h5text{
+	font-size: 1.5rem;
   }
   
   #openButton:hover {
-	background-color: #C4B2E1; 
+	background-color: #1A237E; /* Darker purple on hover */
+  }
+  
+  #openButtonContainer {
+	display: flex;
+	justify-content: center; /* Center horizontally */
+	align-items: center; /* Center vertically */
   }
   
  
@@ -130,19 +141,19 @@ header {
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	background-color: #DED5F0;
+	background-color: #ffffff;
 	padding: 20px;
 	z-index: 1000;
 	box-shadow: 0 0 20px rgba(0, 0, 0, 0.2); 
 	border-radius: 10px;
 	max-width: 80%;
 	text-align: center;
-	border: 5px solid #c2b4da;
+	border: 3px solid #3949AB;
   }
   
  
   #closeButton {
-	background-color: #f44336; /* Red */
+	background-color: #3949AB;
 	border: none;
 	color: white;
 	padding: 10px 20px;
@@ -150,7 +161,7 @@ header {
 	text-decoration: none;
 	display: inline-block;
 	font-size: 14px;
-	margin-top: 10px;
+	margin-top: 15px;
 	cursor: pointer;
 	border-radius: 5px;
 	transition: background-color 0.3s; /* Smooth color transition */
@@ -182,6 +193,12 @@ header {
 	overflow: hidden; 
 	width: 50%; 
 	margin: 0 auto; 
+  }
+
+  .card-group {
+	display: flex;
+	flex-wrap: wrap;
+	width: 80%;
   }
 
   #upload-form {
@@ -327,7 +344,7 @@ header {
   }
   /* Style for the button */
   .modal button {
-	display: block; /* Make the button a block element */
+	display: flex; /* Make the button a block element */
 	margin: 20px auto 0; /* Add some top margin to separate it from the image */
   }
 
