--- a/styles/styles.css
+++ b/styles/styles.css
@@ -423,6 +423,73 @@ select {
 	
 }
 
+form {
+	max-width: 400px;
+	margin: 0 auto;
+	background-color: #fff;
+	padding: 20px;
+	border-radius: 5px;
+	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  }
+
+  label {
+	display: block;
+	margin-bottom: 5px;
+	font-weight: bold;
+  }
+
+  input[type="text"] {
+	width: 100%;
+	padding: 8px;
+	margin-bottom: 15px;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	box-sizing: border-box;
+  }
+
+  .pointsneeded svg {
+	margin-right: 5px;
+  }
+
+  input[type="checkbox"] {
+	appearance: none;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	height: 1rem;
+	width: 1rem;
+	border: 1px solid #000;
+	border-radius: 0.25rem;
+	cursor: pointer;
+	outline: none;
+	transition: background-color 0.3s;
+  }
+  
+
+  input[type="checkbox"]:checked {
+	background-color: #000;
+  }
+
+  label{
+	color: #1A237E;
+  }
+
+  .pointsneeded {
+	display: flex;
+	align-items: center; 
+  }
+
+  input[type="submit"] {
+	color: white;
+	padding: 10px 15px;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
+	transition: background-color 0.3s ease;
+  }
+
+  input[type="submit"]:hover {
+	background-color: #45a049;
+  }
 
  
 /* Card Carousell */
