--- a/styles/styles.css
+++ b/styles/styles.css
@@ -186,15 +186,6 @@ header {
 	  text-align: center;
   }
 
-  .modal-container {
-	display: flex; 
-	justify-content: center; 
-	align-items: center; 
-	overflow: hidden; 
-	width: 50%; 
-	margin: 0 auto; 
-  }
-
   .card-group {
 	display: flex;
 	flex-wrap: wrap;
@@ -213,12 +204,6 @@ header {
 	background-color: #edf2f7;
   }
   
-  /* Style for the image */
-  .modal img {
-	width: 60%; /* Ensure the image does not exceed its container */
-	height: 65vh; /* Limit the height to 80% of the viewport height */
-	margin: 0 auto; /* Center the image horizontally */
-  }
 
   .px-40 {
 	margin: auto;
@@ -491,6 +476,38 @@ form {
 	background-color: #45a049;
   }
 
+  .flex.items-stretch.justify-center {
+	display: flex;
+  }
+  
+  /* Modal container styles */
+  .modal-container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+  }
+
+  /* Modal content styles */
+  .modal {
+	background-color: white;
+	padding: 20px;
+	border-radius: 8px;
+  }
+
+  .modal-container img{
+	width: 50%;
+	margin-left: auto;
+	margin-right: auto;
+  }
+  
+  /* Hide the modal by default */
+  .hidden {
+	display: none;
+  }
  
 /* Card Carousell */
   @import url("https://fonts.googleapis.com/css?family=DM+Sans:400,500,700&display=swap");
