--- a/styles/styles.css
+++ b/styles/styles.css
@@ -476,6 +476,16 @@ form {
 	background-color: #45a049;
   }
 
+  #msg{
+	border: 1px solid #1A237E;
+  }
+  .fb-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	margin-top: 2%;
+  }
   .flex.items-stretch.justify-center {
 	display: flex;
   }
