--- a/styles/profile.css
+++ b/styles/profile.css
@@ -521,7 +521,7 @@ form {
   }
 
   .badges {
-	margin-top: 15%
+	margin-top: 15%;
   }
 /* Card Carousell */
   @import url("https://fonts.googleapis.com/css?family=DM+Sans:400,500,700&display=swap");
