--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,6 +12,23 @@ html, body {
 	
   }
 
+  .modal-container {
+	display: flex;
+	width: 20%;
+	height: 20%;
+	justify-content: center;
+	align-items: center;
+  }
+  
+  /* Modal Content */
+  .modal {
+	background-color: white;
+	padding: 10px; /* Adjust padding */
+	border-radius: 8px;
+	text-align: center;
+  }
+  
+
   button#dropdown-toggle {
 	background-color: #3949AB; 
   }
@@ -55,6 +72,11 @@ header {
 	border-bottom: 1px solid black;
   }
 
+  .modal-container img{
+	width: 25%;
+	margin-left: auto;
+	margin-right: auto;
+  }
   .crane-container {
 	display: flex;
 	justify-content: center;
@@ -490,35 +512,7 @@ form {
 	display: flex;
   }
   
-  /* Modal container styles */
-  .modal-container {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-  }
 
-  /* Modal content styles */
-  .modal {
-	background-color: white;
-	padding: 20px;
-	border-radius: 8px;
-  }
-
-  .modal-container img{
-	width: 50%;
-	margin-left: auto;
-	margin-right: auto;
-  }
-  
-  /* Hide the modal by default */
-  .hidden {
-	display: none;
-  }
- 
 /* Card Carousell */
   @import url("https://fonts.googleapis.com/css?family=DM+Sans:400,500,700&display=swap");
   
@@ -585,19 +579,6 @@ form {
 	}
   }
 
-  .modal {
-	display: none;
-	position: fixed;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	background-color: white;
-	padding: 20px;
-	border: 1px solid #ccc;
-	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-	width: 70%; 
-	height: 80%; 
-  }
 
   #image-container {
 	margin-top: 20px;
