--- a/styles/register.css
+++ b/styles/register.css
@@ -47,7 +47,7 @@ header {
 
   .container {
     display: flex;
-    height: 80vh;
+    height: 100vh;
     margin-left: auto;
     margin-right: auto;
   }
@@ -55,17 +55,17 @@ header {
   .image-container img {
     max-width: 100%;
     height: auto;
-    max-height: 80vh; /* Adjust as needed */
+    max-height: 100vh; 
   }
   
   .form-container {
-    width: 65%; /* Adjust as needed */
+    width: 65%; 
     
   }
 
   .flex.items-center input[type="checkbox"] {
     margin-right: 10px;
-    margin-left: 0; /* Align checkbox to the left */
+    margin-left: 0; 
   }
   
   .card {
@@ -73,7 +73,7 @@ header {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
     padding: 20px;
     border-radius: 8px;
-    height: 80vh;
+    height:77vh;
     width: 100%;
     padding-left: 2%;
   }
@@ -133,7 +133,7 @@ header {
   }
 
   #saveInfo {
-    margin-right: auto;
+    margin-right: a;
   }
 
   .checkout-container {
@@ -201,16 +201,58 @@ header {
   
   /* Responsive styles */
   @media screen and (max-width: 768px) {
-    nav ul {
-      display: none;
+    .container {
+      flex-direction: column; 
+      height: auto; 
     }
   
-    #hamburger-menu {
-      display: block;
+    .image-container img {
+      max-width: 100%; 
+      height: auto;
+      max-height: none; 
     }
   
-    .logotext {
-      flex-direction: column;
+    .form-container {
+      width: 100%; 
+    }
+  
+    .card {
+      height: auto; 
+    }
+  
+    .form-title {
+      font-size: 2rem; 
+      margin-top: 5%; 
+    }
+  
+    .form-control {
+      font-size: 16px; 
+    }
+  
+    .btn-submit {
+      margin-top: 10%; 
+    }
+  
+    .checkout-container {
+      width: 100%;
+    }
+  
+    .form-group {
+      margin-bottom: 15px; 
+    }
+  
+    .order-summary h3 {
+      margin-bottom: 15px; 
+    }
+  
+    .flex {
+      flex-direction: column; 
+    }
+  
+    .mr-2,
+    .ml-2 {
+      margin: 0; 
     }
   }
+  
   
