--- a/styles/aboutstyle.css
+++ b/styles/aboutstyle.css
@@ -1,6 +1,13 @@
+@font-face {
+  font-family: Inter;
+  src: url(fonts/Inter-Medium.otf);
+}
+
 * {
 	box-sizing: border-box;
 }
+
+
 
 html {
 	cursor: url("images/1x/cursor.png"), auto;
@@ -9,7 +16,7 @@ html {
 html, body {
 	width: 100%;
 	height: 100%;
-	font-family: Arial, sans-serif;
+	font-family: Inter;
 	
   }
 
