--- a/styles/contactstyle.css
+++ b/styles/contactstyle.css
@@ -1,4 +1,8 @@
-
+@font-face {
+	font-family: Inter;
+	src: url(fonts/Inter-Medium.otf);
+  }
+  
 * {
 	box-sizing: border-box;
 }
@@ -7,7 +11,7 @@
 html, body {
 	width: 100%;
 	height: 100%;
-	font-family: Arial, sans-serif;
+	font-family: Inter;
 	
   }
 
