--- a/styles/profile.css
+++ b/styles/profile.css
@@ -1,3 +1,9 @@
+@font-face {
+	font-family: Inter;
+	src: url(fonts/Inter-Medium.otf);
+  }
+  
+
 * {
 	box-sizing: border-box;
 }
@@ -8,7 +14,7 @@ html {
 html, body {
 	width: 100%;
 	height: 100%;
-	font-family: Arial, sans-serif;
+	font-family: Inter;
 	
   }
 
