--- a/styles/register.css
+++ b/styles/register.css
@@ -1,3 +1,9 @@
+@font-face {
+  font-family: Inter;
+  src: url(fonts/Inter-Medium.otf);
+}
+
+
 * {
 	box-sizing: border-box;
 }
@@ -6,7 +12,7 @@
 html, body {
 	width: 100%;
 	height: 100%;
-	font-family: Arial, sans-serif;
+	font-family: Inter;
 	
   }
 
