--- a/styles/aboutstyle.css
+++ b/styles/aboutstyle.css
@@ -259,12 +259,12 @@ header {
 
   .malcom h2{
     font-size: 2rem;
-    color: #6e657e;
+    color: #1A237E;
   }
   
   .malcom h3{
     font-size: 1.5rem;
-    color: #6e657e;
+    color: #1A237E;
   }
 
   .aboutyeji {
@@ -278,12 +278,12 @@ header {
 
   .yeji h2{
     font-size: 2rem;
-    color: #6e657e;
+    color: #1A237E;
   }
 
   .yeji h3{
     font-size: 1.5rem;
-    color: #6e657e;
+    color: #1A237E;
   }
 
   .complogo {
